Fixed spacing issue

--- a/src/styles/views/Header.scss
+++ b/src/styles/views/Header.scss
@@ -41,7 +41,6 @@
 }
 
 .button-team {
-  //background-color: pink;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -69,8 +68,7 @@
 }
 
 .button-logout {
-  //background-color: green;
-  padding-left: 20px;
+  padding-left: 1vw;
   display: flex;
   align-items: center;
 }
